Edit courses using the same template as create